tambahkan channel selector